ndb - bug#54945 - fix 1) incorrect early abort of scan 2) incorrect handling of WAIT_AI_SCAN during node-failure handling